Changes display from dotnet test to Minsk.Tests'

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,4 +32,4 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 - script: dotnet test $(tests)
-  displayName: 'dotnet test'
+  displayName: 'Minsk.Tests'
