--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,36 +5,12 @@
             "label": "build",
             "command": "dotnet",
             "type": "process",
+            "windows": {
+                "command": ".\\build.cmd"
+              },
             "args": [
                 "build",
-                "${workspaceFolder}/mc/mc.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/mc/mc.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "${workspaceFolder}/mc/mc.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "${workspaceFolder}/src/Minsk.sln"
             ],
             "problemMatcher": "$msCompile"
         }
